# vulkanBasics

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  notes.md  session.vim
assets/shaders/: gradientTriangle.frag  gradientTriangle.vert
commands/: config-clang-dbg.bat  run-clang.bat  run-msvc-dbg.bat  run-msvc-rel.bat
include/: application.h  application.hpp
scripts/: build-clang.bat  build-msvc-dbg.bat  build-msvc-rel.bat  compileShader.bat  config-clang-dbg.bat  config-clang-rel.bat  run-clang.bat  run-msvc-dbg.bat  run-msvc-rel.bat
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.h  main.cpp
src/core/: application.cpp  application.h  vulkanConfig.h  window.cpp  window.h
src/renderer/: camera.cpp  camera.h  commandBuffers.cpp  commandBuffers.h  device.cpp  device.h  model.cpp  model.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vulkanContext.cpp  vulkanContext.h  windowSurface.cpp  windowSurface.h
src/renderer/buffer/: commandBuffer.cpp  commandBuffer.h  indexBuffer.cpp  indexBuffer.h  uniformBuffer.cpp  uniformBuffer.h  vertexBuffer.cpp  vertexBuffer.h
src/utils/: bufferUtils.cpp  bufferUtils.h  commandBufferUtils.cpp  commandBufferUtils.h  imageUtils.cpp  imageUtils.h  utils.cpp  utils.h
